<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv_bottomSheet"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_person1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person_1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_person1"
        app:layout_constraintStart_toEndOf="@+id/iv_person1"
        app:layout_constraintTop_toTopOf="@+id/iv_person1" />

    <ImageView
        android:id="@+id/iv_person1"
        android:layout_width="55dp"
        android:layout_height="58dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/person"
        android:src="@drawable/ic_android_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_person2"
        android:layout_width="55dp"
        android:layout_height="58dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/person"
        android:src="@drawable/ic_android_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_person1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:text="@string/person_2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_person2"
        app:layout_constraintStart_toEndOf="@+id/iv_person2"
        app:layout_constraintTop_toTopOf="@+id/iv_person2" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/iv_person2"
        app:layout_constraintTop_toBottomOf="@+id/iv_person1"
        app:layout_constraintVertical_bias="0.543"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnClose"
        android:layout_width="221dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:text="Fechar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_person2" />

</androidx.constraintlayout.widget.ConstraintLayout>